modifying size of logos

--- a/index.html
+++ b/index.html
@@ -318,10 +318,11 @@
         }
         
         .institution-logo {
-            max-width: 300px;
+            max-width: 200px;
             display: flex;
             align-items: center;
             justify-content: center;
+						margin-right: 15px; /* Added spacing */
         }
         
         .institution-name {
