modifying form handler

--- a/index.html
+++ b/index.html
@@ -1247,8 +1247,10 @@
 						<div class="content-section">
 								<h2 class="section-title">Contact Us</h2>
 								
-								<form action="https://formsubmit.co/el/yomoni" method="POST">
-								<!--<form id="contactForm" action="https://formsubmit.co/19e64879c1f9d37f@redongra.github.io/website/" method="POST" class="contact-form"> --!>
+									<form id="contactForm" 
+												action="https://formsubmit.co/el/yomoni" 
+												method="POST"
+												class="contact-form">
 										<!-- Required FormSubmit fields -->
 									  <input type="hidden" name="_next" value="https://redongra.github.io/website/thanks.html">
 								    <input type="hidden" name="_template" value="table">
