--- a/thanks.html
+++ b/thanks.html
@@ -1,40 +1,31 @@
 <!DOCTYPE html>
-<html lang="es">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thank You - REDONGRA</title>
-    <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #0a1a3d;
-            color: #f7f9fc;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            text-align: center;
-        }
-        .container {
-            max-width: 600px;
-            padding: 2rem;
-        }
-        h1 {
-            color: #4a89dc;
-        }
-        a {
-            color: #4a89dc;
-            text-decoration: none;
-        }
-    </style>
+		<title>Thank You - REDONGRA</title>
+		<style>
+				body {
+						background-color: #0a1a3d;
+						color: white;
+						font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+						text-align: center;
+						padding: 50px;
+				}
+				.checkmark {
+						color: #4a89dc;
+						font-size: 100px;
+						margin-bottom: 20px;
+				}
+				a {
+						color: #4a89dc;
+						text-decoration: none;
+				}
+		</style>
 </head>
 <body>
-    <div class="container">
-        <h1>Thank You for Contacting REDONGRA!</h1>
-        <p>Your message has been successfully submitted. We'll get back to you soon.</p>
-        <p>You should receive a confirmation email shortly.</p>
-        <p><a href="index.html">← Return to Home Page</a></p>
-    </div>
+		<div class="checkmark">✓</div>
+		<h1>Thank You!</h1>
+		<p>Your message has been successfully sent to REDONGRA.</p>
+		<p>We'll get back to you soon.</p>
+		<p><a href="index.html">Return to homepage</a></p>
 </body>
 </html>
