modifying form handler

--- a/index.html
+++ b/index.html
@@ -1248,7 +1248,7 @@
 								<h2 class="section-title">Contact Us</h2>
 								
 									<form id="contactForm" 
-												action="https://formsubmit.co/el/yomoni" 
+												action="https://formsubmit.co/redongra@zohomail.eu" 
 												method="POST"
 												class="contact-form">
 										<!-- Required FormSubmit fields -->
