logo institutions size modified

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
         }
         
         .institution-logo {
-            max-width: 200px;
+            max-width: 300px;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -1017,7 +1017,7 @@
 								<div class="institution-logo">
 									<i class="fas fa-cogs"></i>
 								</div>
-								<div class="institution-name">University of the Balearic Islands</div>
+								<div class="institution-name">University of the Balearic Islands (UIB)</div>
 							</a>
 						</div>
 						<p class="institution-pi">PI: David Benjamin Keitel</p>
