logo institutions size modified and logos added

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
         }
         
         .institution-logo {
-            max-width: 300px;
+            max-width: 250px;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -827,7 +827,7 @@
 						<div class="institution-header">
 							<a href="https://www.iac.es/en" target="_blank" rel="noopener noreferrer" class="institution-link">
 								<div class="institution-logo">
-									<i class="fas fa-flask"></i>
+									<img src="Figures/logo-IAC_2023_COLOR_600px.png" alt="ICE-CSIC Logo">
 								</div>
 								<div class="institution-name">Instituto de Astrofísica de Canarias (IAC)</div>
 							</a>
