more logos added

--- a/index.html
+++ b/index.html
@@ -827,7 +827,7 @@
 						<div class="institution-header">
 							<a href="https://www.iac.es/en" target="_blank" rel="noopener noreferrer" class="institution-link">
 								<div class="institution-logo">
-									<img src="Figures/logo-IAC_2023_COLOR_600px.png" alt="ICE-CSIC Logo">
+									<img src="Figures/logo-IAC_2023_COLOR_600px.png" alt="IAC Logo">
 								</div>
 								<div class="institution-name">Instituto de Astrofísica de Canarias (IAC)</div>
 							</a>
@@ -861,7 +861,7 @@
 						<div class="institution-header">
 							<a href="https://www.iem.csic.es/index_i.html" target="_blank" rel="noopener noreferrer" class="institution-link">
 								<div class="institution-logo">
-									<i class="fas fa-cogs"></i>
+									<img src="Figures/logo-IEM.jpg" alt="IEM-CSIC Logo">
 								</div>
 								<div class="institution-name">Institute for the Structure of Matter (IEM-CSIC) </div>
 							</a>
@@ -912,7 +912,7 @@
 						<div class="institution-header">
 							<a href="https://webific.ific.uv.es/web/en" target="_blank" rel="noopener noreferrer" class="institution-link">
 								<div class="institution-logo">
-									<i class="fas fa-cogs"></i>
+									<img src="Figures/logo-IFIC_model.png" alt="IFIC-CSIC/UV Logo">
 								</div>
 								<div class="institution-name"> Instituto de Física Corpuscular (IFIC-CSIC/UV)</div>
 							</a>
@@ -930,7 +930,7 @@
 						<div class="institution-header">
 							<a href="https://www.ift.uam-csic.es/en/front" target="_blank" rel="noopener noreferrer" class="institution-link">
 								<div class="institution-logo">
-									<i class="fas fa-cogs"></i>
+									<img src="Figures/logo-IFT.jpg" alt="IFT-CSIC/UAM Logo">
 								</div>
 								<div class="institution-name">Institute for Theoretical Physics (IFT-CSIC/UAM)</div>
 							</a>
