--- a/index.html
+++ b/index.html
@@ -964,7 +964,7 @@
 						<div class="institution-header">
 							<a href="https://www.ua.es/en/" target="_blank" rel="noopener noreferrer" class="institution-link">
 								<div class="institution-logo">
-									<i class="fas fa-cogs"></i>
+									<img src="Figures/logo-alicante2.png" alt="UA Logo">
 								</div>
 								<div class="institution-name">University of Alicante (UA)</div>
 							</a>
