--- a/index.html
+++ b/index.html
@@ -810,7 +810,7 @@
 						<div class="institution-header">
 							<a href="https://www.iaa.csic.es" target="_blank" rel="noopener noreferrer" class="institution-link">
 								<div class="institution-logo">
-									<i class="fas fa-atom"></i>
+									<img src="Figures/logo-IAA.jpg" alt="IAA-CSIC Logo">
 								</div>
 								<div class="institution-name">Institute of Astrophysics of Andalusia (IAA-CSIC)</div>
 							</a>
@@ -936,7 +936,7 @@
 							</a>
 						</div>
 						<p class="institution-pi">PI: Juan García-Bellido Capdevila</p>
-						<p><strong>Groups:</strong> </p>
+						<p><strong>Groups:</strong> Cosmology and Gravitational Waves</p>
 						<div class="institution-members">
 							<strong>Projects/Research Focus:</strong>
 							<p>Virgo, LISA and Einstein Telescope; cosmology, primordial black holes, data analysis.</p>
