--- a/index.html
+++ b/index.html
@@ -947,7 +947,7 @@
 						<div class="institution-header">
 							<a href="https://igfae.usc.es/igfae/en/" target="_blank" rel="noopener noreferrer" class="institution-link">
 								<div class="institution-logo">
-									<i class="fas fa-cogs"></i>
+									<img src="Figures/logo-IGFAE_VERSIONES-02_azul-escuro-6-768x245.png" alt="IGFAE-USC Logo">
 								</div>
 								<div class="institution-name">Instituto Galego de Física de Altas Enerxías (IGFAE)</div>
 							</a>
@@ -981,16 +981,16 @@
 						<div class="institution-header">
 							<a href="https://www.uca.es/?lang=en" target="_blank" rel="noopener noreferrer" class="institution-link">
 								<div class="institution-logo">
-									<i class="fas fa-cogs"></i>
+									<img src="Figures/logo-UCA-V2_COLOR_100x142mm.png" alt="UCA Logo">
 								</div>
 								<div class="institution-name">Universidad de Cádiz (UCA)</div>
 							</a>
 						</div>
 						<p class="institution-pi">PI: Ignacio Mateos Martín</p>
-						<p><strong>Groups:</strong> </p>
+						<p><strong>Groups:</strong> Andalusian LISA Instrumentation Group</p>
 						<div class="institution-members">
 							<strong>Projects/Research Focus:</strong>
-							<p>LISA; instrumentation.</p>
+							<p>LISA, Instrumentation, Magnetometry, IOD/IOV.</p>
 						</div>
 					</div>
 					
