one more logo together with a group

--- a/index.html
+++ b/index.html
@@ -1084,13 +1084,13 @@
 						<div class="institution-header">
 							<a href="https://www.usal.es" target="_blank" rel="noopener noreferrer" class="institution-link">
 								<div class="institution-logo">
-									<i class="fas fa-cogs"></i>
+									<img src="Figures/logo-USAL.png" alt="USAL Logo">  
 								</div>
 								<div class="institution-name">Universidad de Salamanca (USAL)</div>
 							</a>
 						</div>
 						<p class="institution-pi">PI: María Ángeles Pérez García</p>
-						<p><strong>Groups:</strong> GW Group</p>
+						<p><strong>Groups:</strong> Nuclear Astrophysics and astroparticles, GW</p>
 						<div class="institution-members">
 							<strong>Projects/Research Focus:</strong>
 							<p>Einstein Telescope; modeling, multimessenger astronomy.</p>
