--- a/index.html
+++ b/index.html
@@ -998,7 +998,7 @@
 						<div class="institution-header">
 							<a href="https://www.ugr.es/en" target="_blank" rel="noopener noreferrer" class="institution-link">
 								<div class="institution-logo">
-									<i class="fas fa-cogs"></i>
+									<img src="Figures/logo-UGR-MARCA-01-color.png" alt="UGR Logo">
 								</div>
 								<div class="institution-name">University of Granada (UGR)</div>
 							</a>
@@ -1334,7 +1334,7 @@
 				<div class="contact-info">
 					<div class="contact-item">
 						<i class="fas fa-envelope contact-icon"></i>
-						<a href="mailto:redongra@zohomail.eu">redongra@zohomail.eu</a>
+						<a href="mailto:redongra_info@listas.csic.es">redongra_info@listas.csic.es</a>
 					</div>
 					<div class="contact-item">
 						<i class="fas fa-phone contact-icon"></i>
