more logos. Link to the main redongra mailing list added.

--- a/index.html
+++ b/index.html
@@ -748,7 +748,7 @@
 			
 			<div class="content-section">
 				<h2 class="section-title">About our Collaboration</h2>
-				<p>The Spanish Gravitational Wave Network (REDONGRA) brings together research groups across Spain to advance our understanding of the Universe through the detection and analysis of Gravitational Waves. Our collaboration combines expertise in Theoretical Physics, Astrophysics, Data Analysis, Detector Technology, and Computational Physics to contribute to the global effort in this exciting new field of Astronomy. If you would like to keep updated about the activities of the network please <a href="#contact" class="custom-link">CONTACT</a> us. </p>
+				<p>The Spanish Gravitational Wave Network (REDONGRA) brings together research groups across Spain to advance our understanding of the Universe through the detection and analysis of Gravitational Waves. Our collaboration combines expertise in Theoretical Physics, Astrophysics, Data Analysis, Detector Technology, and Computational Physics to contribute to the global effort in this exciting new field of Astronomy. If you would like to be updated about the activities of the network please subscribe to the REDONGRA mailing list <a href="https://listas.csic.es/wws/info/redongra" style="color: var(--text-light)"><strong>HERE</strong></a>. This is a moderated list where you can also send announcements and relevant information.</p>
 				
 				<div class="section-grid" style="margin-top: 40px;">
 					<div class="card">
@@ -844,7 +844,7 @@
 						<div class="institution-header">
 							<a href="https://icc.ub.edu" target="_blank" rel="noopener noreferrer" class="institution-link">
 								<div class="institution-logo">
-									<i class="fas fa-star"></i>
+									<img src="Figures/logo-iccub-vertival.png" alt="ICCUB Logo">
 								</div>
 								<div class="institution-name">Institute of Cosmos Sciences of the University of Barcelona (ICCUB)</div>
 							</a>
@@ -853,7 +853,7 @@
 						<p><strong>Groups:</strong> GW group </p>
 						<div class="institution-members">
 							<strong>Projects/Research Focus:</strong>
-							<p>Virgo, ET and LISA; Instrumentation, stellar dynamics, Numerical Relativity, Nuclear Physics, data analysis and software engineering.</p>
+							<p>Virgo, ET and LISA; instrumentation, GW lensing, stellar dynamics, Numerical Relativity, Nuclear Physics, data analysis and software engineering.</p>
 						</div>
 					</div>
 					
@@ -947,7 +947,7 @@
 						<div class="institution-header">
 							<a href="https://igfae.usc.es/igfae/en/" target="_blank" rel="noopener noreferrer" class="institution-link">
 								<div class="institution-logo">
-									<img src="Figures/logo-IGFAE_VERSIONES-02_azul-escuro-6-768x245.png" alt="IGFAE-USC Logo">
+									<img src="Figures/logo-IGFAE_def_logo_blanco.png" alt="IGFAE-USC Logo">
 								</div>
 								<div class="institution-name">Instituto Galego de Física de Altas Enerxías (IGFAE)</div>
 							</a>
@@ -1021,7 +1021,7 @@
 							</a>
 						</div>
 						<p class="institution-pi">PI: David Benjamin Keitel</p>
-						<p><strong>Groups:</strong> </p>
+						<p><strong>Groups:</strong> Gravitational Physics Group, theory and observation (GRAVITY)</p>
 						<div class="institution-members">
 							<strong>Projects/Research Focus:</strong>
 							<p>LIGO, GEO600, Einstein Telescope, LISA; data analysis, numerical relativity, continuous waves searches.</p>
@@ -1032,7 +1032,7 @@
 						<div class="institution-header">
 							<a href="https://www.upc.edu/en?set_language=en" target="_blank" rel="noopener noreferrer" class="institution-link">
 								<div class="institution-logo">
-									<i class="fas fa-cogs"></i>
+									<img src="Figures/logo-upclogoimage.jpeg" alt="UPC Logo">
 								</div>
 								<div class="institution-name">Universitat Politècnica de Catalunya - BarcelonaTech (UPC)</div>
 							</a>
@@ -1067,7 +1067,7 @@
 						<div class="institution-header">
 							<a href="https://www.ehu.eus/en/en-home" target="_blank" rel="noopener noreferrer" class="institution-link">
 								<div class="institution-logo">
-									<i class="fas fa-cogs"></i>
+									<img src="Figures/logo-UPV-EHU.jpg" alt="EHU-UPV Logo"> 
 								</div>
 								<div class="institution-name">University of the Basque Country (UPV/EHU)</div>
 							</a>
