more logos. Link to contact section added.

--- a/index.html
+++ b/index.html
@@ -878,7 +878,7 @@
 						<div class="institution-header">
 							<a href="https://www.ifae.es" target="_blank" rel="noopener noreferrer" class="institution-link">
 								<div class="institution-logo">
-									<i class="fas fa-cogs"></i>
+									<img src="Figures/logo-IFAE_logo_SO.jpg" alt="IFAE Logo">
 								</div>
 								<div class="institution-name">Institut de Física d’Altes Energies (IFAE)</div>
 							</a>
@@ -1015,7 +1015,7 @@
 						<div class="institution-header">
 							<a href="https://www.uib.eu" target="_blank" rel="noopener noreferrer" class="institution-link">
 								<div class="institution-logo">
-									<i class="fas fa-cogs"></i>
+									<img src="Figures/logo-uib-iac3.png" alt="UIB Logo">
 								</div>
 								<div class="institution-name">University of the Balearic Islands (UIB)</div>
 							</a>
@@ -1101,7 +1101,7 @@
 						<div class="institution-header">
 							<a href="https://www.uv.es/uvweb/college/en/university-valencia-1285845048380.html" target="_blank" rel="noopener noreferrer" class="institution-link">
 								<div class="institution-logo">
-									<i class="fas fa-cogs"></i>
+									<img src="Figures/logo-uv-logo.jpg" alt="UV Logo">  
 								</div>
 								<div class="institution-name">University of Valencia (UV)</div>
 							</a>
