Link to contact section added.

--- a/index.html
+++ b/index.html
@@ -749,6 +749,7 @@
 			<div class="content-section">
 				<h2 class="section-title">About our Collaboration</h2>
 				<p>The Spanish Gravitational Wave Network (REDONGRA) brings together research groups across Spain to advance our understanding of the Universe through the detection and analysis of Gravitational Waves. Our collaboration combines expertise in Theoretical Physics, Astrophysics, Data Analysis, Detector Technology, and Computational Physics to contribute to the global effort in this exciting new field of Astronomy. If you would like to be updated about the activities of the network please subscribe to the REDONGRA mailing list <a href="https://listas.csic.es/wws/info/redongra" style="color: var(--text-light)"><strong>HERE</strong></a>. This is a moderated list where you can also send announcements and relevant information.</p>
+				<p>For information about the REDONGRA network contact us <a href="#contact" style="color: var(--text-light)"><strong>HERE</strong></a></p>
 				
 				<div class="section-grid" style="margin-top: 40px;">
 					<div class="card">
