--- a/index.html
+++ b/index.html
@@ -794,7 +794,7 @@
 						<div class="institution-header">
 							<a href="https://www.ciemat.es" target="_blank" rel="noopener noreferrer" class="institution-link">
 								<div class="institution-logo">
-									<i class="fas fa-atom"></i>
+									<img src="Figures/logo-ciemat.png" alt="CIEMAT Logo">
 								</div>
 								<div class="institution-name">Centro de Investigaciones Energéticas, Medioambientales y Tecnológicas (CIEMAT)</div>
 							</a>
@@ -896,7 +896,7 @@
 						<div class="institution-header">
 							<a href="https://ifca.unican.es/en-us" target="_blank" rel="noopener noreferrer" class="institution-link">
 								<div class="institution-logo">
-									<i class="fas fa-cogs"></i>
+									<img src="Figures/logo-IFCA_vertical_invertido.png" alt="IFCA-CSIC/UC Logo">
 								</div>
 								<div class="institution-name">Institute of Physics of Cantabria (IFCA-CSIC/UC)</div>
 							</a>
@@ -1050,7 +1050,7 @@
 						<div class="institution-header">
 							<a href="https://www.upm.es/internacional" target="_blank" rel="noopener noreferrer" class="institution-link">
 								<div class="institution-logo">
-									<i class="fas fa-cogs"></i>
+									<img src="Figures/logo-UPM-SFS24594.jpeg" alt="UPM Logo">
 								</div>
 								<div class="institution-name">Technical University of Madrid (UPM)</div>
 							</a>
