--- a/index.html
+++ b/index.html
@@ -1177,6 +1177,14 @@
 					
 					<div class="timeline-item">
 						<div class="timeline-content">
+							<div class="timeline-date"><i class="fas fa-calendar-alt"></i> September 1-5, 2025</div>
+							<h3>Spanish & Portuguese Relativity Meeting (EREP 2025)</h3>
+							<p>University of Alicante (UA), Alicante.</p>
+						</div>
+					</div>
+
+					<div class="timeline-item">
+						<div class="timeline-content">
 							<div class="timeline-date"><i class="fas fa-calendar-alt"></i> September 15-16, 2025</div>
 							<h3>GW150914 anniversary</h3>
 							<p>University of the Balearic Islands (UIB), Palma de Mallorca - To celebrate the 10th anniversary of the GW150914 detection.</p>
