--- a/index.html
+++ b/index.html
@@ -794,7 +794,7 @@
 						<div class="institution-header">
 							<a href="https://www.ciemat.es" target="_blank" rel="noopener noreferrer" class="institution-link">
 								<div class="institution-logo">
-									<img src="Figures/logo-ciemat.png" alt="CIEMAT Logo">
+									<img src="Figures/logo-CIEMAT-1.png" alt="CIEMAT Logo">
 								</div>
 								<div class="institution-name">Centro de Investigaciones Energéticas, Medioambientales y Tecnológicas (CIEMAT)</div>
 							</a>
