--- a/thanks.html
+++ b/thanks.html
@@ -1,31 +1,57 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Thank You - REDONGRA</title>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 		<style>
+				/* Copy your existing CSS styles here */
 				body {
 						background-color: #0a1a3d;
-						color: white;
+						color: #f7f9fc;
 						font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 						text-align: center;
-						padding: 50px;
+						padding: 50px 20px;
 				}
-				.checkmark {
+				.thank-you-container {
+						max-width: 800px;
+						margin: 0 auto;
+						background: rgba(42, 75, 138, 0.6);
+						padding: 40px;
+						border-radius: 15px;
+						box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+				}
+				h1 {
 						color: #4a89dc;
-						font-size: 100px;
 						margin-bottom: 20px;
 				}
-				a {
-						color: #4a89dc;
+				p {
+						font-size: 1.2rem;
+						margin-bottom: 30px;
+				}
+				.btn {
+						display: inline-block;
+						background: #4a89dc;
+						color: white;
+						padding: 12px 30px;
+						border-radius: 30px;
 						text-decoration: none;
+						font-weight: 600;
+						transition: all 0.3s ease;
+				}
+				.btn:hover {
+						background: #2a5da8;
+						transform: translateY(-3px);
 				}
 		</style>
 </head>
 <body>
-		<div class="checkmark">✓</div>
-		<h1>Thank You!</h1>
-		<p>Your message has been successfully sent to REDONGRA.</p>
-		<p>We'll get back to you soon.</p>
-		<p><a href="index.html">Return to homepage</a></p>
+		<div class="thank-you-container">
+				<h1><i class="fas fa-check-circle"></i> Thank You!</h1>
+				<p>Your application to the REDONGRA Exchange Program has been successfully submitted.</p>
+				<p>We will review your application and contact you within 2 weeks.</p>
+				<a href="index.html" class="btn">Return to Homepage</a>
+		</div>
 </body>
 </html>
